fix: fix tooltip arrow height on Firefox

--- a/themes/default/scss/primeng/theme.scss
+++ b/themes/default/scss/primeng/theme.scss
@@ -814,6 +814,7 @@ ul.ui-autocomplete-multiple-container.ui-widget.ui-inputtext{
 .ng-tooltip-top::after {
   top: 100%;
   left: 50%;
+  height: 0px;
   margin-left: -5px;
   border-width: 5px;
   border-color: black transparent transparent transparent;
@@ -822,6 +823,7 @@ ul.ui-autocomplete-multiple-container.ui-widget.ui-inputtext{
 .ng-tooltip-bottom::after {
   bottom: 100%;
   left: 50%;
+  height: 0px;
   margin-left: -5px;
   border-width: 5px;
   border-color: transparent transparent black transparent;
